--- a/templates/courses-2/archive-teaching.html
+++ b/templates/courses-2/archive-teaching.html
@@ -24,28 +24,13 @@
     </div>
     {% endfor %}
     {% endif %}
-    <div class="card" style="color: black;">
-        <div class="card-header">
-            <h3 style="align-items: center;text-align: center;">Archieve Teaching Type</h3>
-        </div>
-
-    </div>
-
-    <br>
-    <br>
-
     <div class="card mb-4">
         <div class="card-header">
             <!-- Grid row -->
             <div class="row">
                 <!-- Grid column -->
                 <div class="col-md-8">
-                    <h2 style="color: rgb(0, 0, 0 );">List of Teaching Type</h2>
-                </div>
-
-                <div class="col-md-4">
-                    <input id="searchbox" type="text" class="form-control" name='srh'
-                        placeholder="Search Exam or Course" required>
+                    <h2 style="color: rgb(0, 0, 0 );">List of Archive Teaching Type</h2>
                 </div>
 
                 <!-- Grid column -->
@@ -126,7 +111,7 @@
         <div class="card-header" style="background: none;">
             <div class="row">
                 <div class="col-xl-12 col-md-12 col-12">
-                    <h2>No Exams to show</h2>
+                    <h2>No Teaching Type to show</h2>
                 </div>
             </div>
         </div>
