--- a/templates/courses-2/archive-courses.html
+++ b/templates/courses-2/archive-courses.html
@@ -87,36 +87,32 @@ Institute Dashboard
 
 
 
-<div class="container">
+<div class="">
 
   <br>
   <br>
   <div class="row layout-spacing ">
 
 
-    <div class="col-lg-12 h-100">
-      <div class="col-lg-12 col-md-12 layout-spacing">
-        <div class="statbox widget box box-shadow">
-          <div class="widget-header">
-            <div class="row">
-              <div class="col-xl-12 col-md-12 col-sm-12 col-12">
-                <h4>View Archived Courses</h4>
-              </div>
+    <div class="col-xl-12 col-md-12 col-12 mt-3">
+      <div class="card statbox widget box box-shadow">
+          <div class="card-header">
+              <div class="row">
+                  <div class="col-xl-12 col-md-12 col-12">
+                      <h2 style="color:black;">List of Archived Courses</h2>
+                    </div>
+                </div>
             </div>
-          </div>
+            {% if course %}
           <div class="widget-content widget-content-area">
-
             <div class="table-responsive">
-              <table class="table table-bordered table-hover table-striped table-checkable table-highlight-head mb-4">
-                <thead>
+              <table class="table table-bordered table-hover table-striped mb-4">
                   <tr>
-                    <th class="">#</th>
-                    <th class="">Class</th>
-                    <th class="">Course</th>
-                    <th class="text-center">Actions</th>
+                    <th style="color: #000000;" class="">#</th>
+                    <th style="color: #000000;" class="">Class</th>
+                    <th style="color: #000000;" class="">Course</th>
+                    <th style="color: #000000;" class="text-center">Actions</th>
                   </tr>
-                </thead>
-                <tbody>
 
                   {% for i in course %}
                   <tr id="{{ i.pk }}">
@@ -168,7 +164,6 @@ Institute Dashboard
 
 
                   {% endfor %}
-                </tbody>
               </table>
               <div class="widget-content widget-content-area text-center">
                 <ul class="pagination pagination-style-1 justify-content-center mb-5">
@@ -191,10 +186,19 @@ Institute Dashboard
               </div>
             </div>
           </div>
+            {% else %}
+        <div class="card-header" style="background: none;">
+            <div class="row">
+                <div class="col-xl-12 col-md-12 col-12">
+                    <h2>No Courses to show</h2>
+                </div>
+            </div>
+        </div>
+            {% endif %}
+            
         </div>
       </div>
     </div>
-  </div>
 
 </div>
 <script>
