--- a/templates/Results/TutorGetExamResult.html
+++ b/templates/Results/TutorGetExamResult.html
@@ -251,7 +251,7 @@
                         <!--Table body-->
                             {% for i in students %}
                             <tr>
-                            <td>{{i.student.user.first_name}} {{i.student.user.last_name}}</td>
+                            <td>{{i.student.user.username}}</td>
                             <td>{{i.exam.price}}</td>
                             <td>{{i.exam.Name}}</td>
                             <td>{{i.exam.exam_date}}</td>
