--- a/templates/chat/room1.html
+++ b/templates/chat/room1.html
@@ -39,7 +39,7 @@
                                     <p class="usr-status">online</p>
                                 </div>
                                 <span class="message-badge single-value">6</span>
-                                <img class="ml-3" src="{{photo.url}}" alt="Generic placeholder image">
+                                <img class="ml-3" src="{{photo.url}}" alt="{{i}} image">
                             </li>
                         </a>
                             {% endfor %}
