--- a/templates/batches/tea_showNotice.html
+++ b/templates/batches/tea_showNotice.html
@@ -1,4 +1,4 @@
-{% extends 'dashboard/base.html' %}
+{% extends 'dashboard/Tutor-dashboard.html' %}
 {% load static %}
 {% block main-content %}
 <div class="mt-5">
