--- a/templates/students/enrolledStudents.html
+++ b/templates/students/enrolledStudents.html
@@ -167,9 +167,7 @@
                   {% endif %}
                 </div>
                 <div class="d-flex justify-content-center row my-2">
-                  <button value="{{i.sno}}" id="appointmenttutor" type="button" onclick="newModal(this)"
-                    class="btn btn-sm btn-info createAppointment" data-toggle="modal" data-target="#appointmentModal"
-                    aria-hidden="true" name="button" style="font-size:smaller;">Schedule Class</button>
+                  <a href="{% url 'teaMakeAppointment' i.student.id %}"><button class="btn btn-sm btn-info" type="button" style="font-size:smaller;">Schedule Class</button>
                 </div>
               </div>
               <div class="col-sm-9 col-12">
@@ -235,157 +233,7 @@
         </div>
       </div>
     </div>
-    <!-- appointment modal -->
-    <div class="modal fade" id="appointmentModal" tabindex="-1" role="dialog" aria-labelledby="{{i.sno}}"
-      aria-hidden="true">
-      <div class="modal-dialog modal-lg" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title text-center col-sm-12 col-12"
-              style="text-align: center;">Create Appointment</h5>
-          </div>
-          <form id="createAppointmentForm" action="" method="post">{% csrf_token %}
-            <div class="modal-body">
-              <div class="row">
-                <div class="col-sm-10">
-                  <div class="row form-inline">
-                    <div class="col-sm-2 bold">
-                      Date
-                    </div>
-                    <div class="col-sm-4">
-                      <input style="width: 100%;" class="form-control" type="date" name="date" value="" required
-                        id="appointmentdate">
-                    </div>
-                    <div class="col-sm-2 bold">
-                      Time
-                    </div>
-                    <div class="col-sm-4">
-                      <input style="width: 100%;" class="form-control" type="time" name="time" value="" required
-                        id="appointmenttime">
-                    </div>
-                  </div>
-                  <br>
-                  <div class="row">
-                    <div class="form-inline">
-                      <div class="col-sm-2 bold">
-                        Timezone
-                      </div>
-                      <div class="col-sm-4">
-                        <select class="form-control col-sm-12" name="timezone" value="" required id="appointmentzone">
-                          <option selected disabled>Timezone</option>
-                          {% include "teacher/timezoneArea.html" %}
-                        </select>
-                      </div>
-                      <div class="col-sm-2 bold">
-                        Duration
-                      </div>
-                      <div class="col-sm-4">
-                        <select class="form-control" name="durationHour" required id="appointmenthour">
-                          <option disabled selected>Hours</option>
-                          <option value="0">0</option>
-                          <option value="1">1</option>
-                          <option value="2">2</option>
-                          <option value="3">3</option>
-                          <option value="4">4</option>
-                          <option value="5">5</option>
-                          <option value="6">6</option>
-                          <option value="7">7</option>
-                          <option value="8">8</option>
-                          <option value="9">9</option>
-                          <option value="10">10</option>
-                          <option value="11">11</option>
-                          <option value="12">12</option>
-                          <option value="13">13</option>
-                          <option value="14">14</option>
-                          <option value="15">15</option>
-                          <option value="16">16</option>
-                          <option value="17">17</option>
-                          <option value="18">18</option>
-                          <option value="19">19</option>
-                          <option value="20">20</option>
-                          <option value="21">21</option>
-                          <option value="22">22</option>
-                          <option value="23">23</option>
-                          <option value="24">24</option>
-                        </select>
-                        <select class="form-control" name="durationMinute" required id="appointmentminute">
-                          <option selected disabled>Minutes</option>
-                          <option value="5">5</option>
-                          <option value="10">10</option>
-                          <option value="15">15</option>
-                          <option value="20">20</option>
-                          <option value="25">25</option>
-                          <option value="30">30</option>
-                          <option value="35">35</option>
-                          <option value="40">40</option>
-                          <option value="45">45</option>
-                          <option value="50">50</option>
-                          <option value="55">55</option>
-                        </select>
-                      </div>
-                    </div>
-                  </div>
-                  <br>
-                  <div class="row form-inline">
-                    <div class="col-sm-3 bold">
-                      Recurrence 
-                    </div>
-                    <div class="col-sm-1">
-                      <input id="recurrenceCheck" class="form-check" type="checkbox" name="recc" id="appointmentrecc">
-                    </div>
-                  </div>
-                  <br>
-                  <div class="row form-inline">
-                    <div class="col-sm-2 bold">
-                      Recurrence Pattern
-                    </div>
-                    <div class="col-sm-4">
-                      <select id="reccPattern" class="form-control reccPattern reccEntry" name="reccPattern" required>
-                        <option selected disabled>Choose Reccurence</option>
-                        <option value="D">Daily</option>
-                        <option value="W">Weekly</option>
-                      </select>
-                    </div>
-
-                        <div class="col-sm-2 bold">
-                          Select WeekDays
-                        </div>
-                        <div class="col-sm-4">
-                          <select class="form-control multiselect4 reccWeek reccEntry w-100" name="reccWeek" multiple>
-                            <option value="Sun">Sun</option>
-                            <option value="Mon">Mon</option>
-                            <option value="Tue">Tue</option>
-                            <option value="Wed">Wed</option>
-                            <option value="Thu">Thu</option>
-                            <option value="Fri">Fri</option>
-                            <option value="Sat">Sat</option>
-                          </select>
-                        </div>
-                      
-                      </div>
-                      <br>
-                      <!-- <div class="col-sm-12 bold form-inline spacing">
-                        <div class="col-sm-3">
-                          End After
-                        </div>
-                        <input class="form-control col-sm-3 reccEntry" type="date" id="endingDate" name="endingDate"
-                          value="" disabled>
-                      </div> -->
-                  </div>
-                </div>
-              </div>
-              <br>
-              <div class="modal-footer" id="changeAfterCreation">
-                <input id="tutorId" type="hidden" name="tutorId" value="">
-                <button id="submitAppointment" class="btn btn-info" type="button" name="button">Create</button>
-              </div>
-            <div class="container" style="font-size:small;color:red;">
-              <ul id="ErrorList" class="">
-              </ul>
-            </div>
-          </form>
-        </div>
-      </div>
+    
     {% endfor %}
     {% else %}
     <div class="card w-100 h-25 mx-3">
